# B_MY-PROJECTS

./: .gitignore  README.md  The_uncertainties.ipynb  code_snippets.py  main.py  pyproject.toml
notebooks/: 1_Day1_Web_Scrapper.ipynb  1a_Day_1_playwright.py  2_Day4_Sales_Brochure.py  2b_SALES_Brochure.ipynb  Day1_Web_Scrapper.ipynb  scraper.py
